test/Sema/const_enum_elements.code
// RUN: %target-typecheck-verify-language

enum CarKind {
	static immutable wagon = "Wagon"
	case coupe
	case sedan
	case other(String)
}

extension CarKind {
	static var myCoupe: CarKind {
		return .coupe
	}
}

fn getCarKind() -> CarKind { return .sedan }

fn drive(_ k1: _const CarKind, k2: _const CarKind) {}

fn main() {
	drive(.coupe, k2: .sedan)
	drive(.sedan, k2: .coupe)
	drive(CarKind.coupe, k2: CarKind.sedan)
	drive(CarKind.sedan, k2: CarKind.coupe)
	drive(.other(""), k2: .sedan) // expected-error {{expect a compile-time constant literal}}
	drive(.other(CarKind.wagon), k2: .sedan) // expected-error {{expect a compile-time constant literal}}

	drive(.myCoupe, k2: .sedan) // expected-error {{expect a compile-time constant literal}}
	drive(.coupe, k2: .myCoupe) // expected-error {{expect a compile-time constant literal}}
	drive(.coupe, k2: getCarKind()) // expected-error {{expect a compile-time constant literal}}
	drive(getCarKind(), k2: .coupe) // expected-error {{expect a compile-time constant literal}}
}
